# aiccountability-source_AgDR

./: .gitignore  .htaccess  404.html  AKI Capture explanation  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CNAME  CONTRIBUTING.html  CONTRIBUTING.md  Deep Explanation of the PPP Triplet in AgDR v0.2  LICENSE  LICENSE-CC0.txt  LICENSE-UPDATE.html  Manifesto.html  Manifesto.md  README.html  README.md  agdr-spec.html  agi-court-precedents.html  agi-court-precedents.md  aki-95.html  aki-capture-deep-explanation.html  aki-formal-definition.html  aki-formal-definition.md  analytics-consent.html  beauty-truth-wisdom.html  beauty-truth-wisdom.md  bills-of-exchange-mapping.html  cbca-fiduciary-mapping.html  cbca-fiduciary-mapping.md  cbsa-mapping.html  cbsa-mapping.md  cea-compliance.html  comparison-aviation-black-box.html  comparison-aviation-black-box.md  comparison-medical-records.html  comparison-medical-records.md  eu-ai-act-mapping.html  eu-ai-act-mapping.md  (+41 more)
.github/workflows/: convert.yml  indexnow.yml
AAI/: DRIVE-SETUP.md  HUB.md
AAI/github-artifacts/: INDEX.md
AAI/project-docs/: NOTES.md  ROADMAP.md
AAI/public-resources/: accountability-ai-resources.md
docs/: eu-ai-act-mapping.md  getting-started.md  methodology.md
examples/: aki_capture_demo.py  oasis_spine_demo.py
groundzero/: index.html
sdk/python/: README.md  pyproject.toml
sdk/python/agdr_aki/: __init__.py  capture.py  delta.py  evidence.py  verify.py
simulation/: graphiti_bridge.py  nemoclaw_adapter.py
simulation/data/: agdr_oasis_seed_events.jsonl
specs/: agdr-v0.2.json
specs/v0.2/schemas/: human-delta-chain-v0.2.json
